--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300&family=Poppins:wght@200;400&display=swap" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>GitHub Finder</title>
   </head>
   <body>
     <div id="root"></div>
